@@ -30,6 +30,8 @@ To programs:
 * user/zone: new contributor (Yanadet Sripanich)
 * sfsegyheader creates delrt from o1
 * user/poulsonj: new contributor (Jack Poulson)
+* vpconvert  checks the existence of different pens and prefers gdpen
+  to pngpen
 
 ===Bug fixes===
 
